--- a/lambda/package.json
+++ b/lambda/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "ask-sdk-core": "^2.7.0",
     "ask-sdk-model": "^1.19.0",
-    "aws-sdk": "^2.326.0"
+    "aws-sdk": "^2.326.0",
+    "i18next": "^22.4.9"
   },
   "devDependencies": {
     "ask-sdk-local-debug": "^1.1.0"
